--- a/src/index.css
+++ b/src/index.css
@@ -2,33 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body {
-    font-family: 'Nunito Sans', sans-serif;
-}
-
-/* ===== Scrollbar Customization CSS ===== */
-/* Firefox */
-* {
-    scrollbar-width: auto;
-    scrollbar-color: #febc95 #ebebeb;
-}
-
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-    width: 8px;
-}
-
-*::-webkit-scrollbar-track {
-    background: #ebebeb;
-    border-radius: 10px;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #febc95;
-    border-radius: 10px;
-    border: none;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-    background-color: #fe8740;
+    font-family: 'Poppins', sans-serif;
+    font-size: small;
+    letter-spacing: 1px;
 }
