--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-size: small;
     letter-spacing: 1px;
 }
